HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/OverrideMissingOnDefault/Expected.uv
//! Expected diagnostic metadata for the OverrideMissingOnDefault rejected-source specimen.

expectedDiagnostic("E-TYP-2502", "rule.14.Override-Missing-Err")
